Fixing Auth Forms Responsiveness.
I have come upon a layout issues when making registration from a mobile device. I have improved the responsiveness and the styling of the forms layouts.

I have also added an error page displayed when the user tries to open a page that does not exist.

--- a/client/src/components/layout/FormLayout.module.css
+++ b/client/src/components/layout/FormLayout.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   width: 100%;
+  /* Change */
   height: 100%;
   background-color: rgba(255, 255, 255, 0);
 }
@@ -49,7 +50,8 @@
 
 .form-holder {
   width: 100%;
-  height: 100%;
+  height: fit-content;
+  min-height: 100vh;
   background-color: rgba(255, 255, 255, 0.85);
 }
 
@@ -58,7 +60,9 @@
   flex-direction: column;
   align-items: center;
   height: fit-content;
-  padding: 5em 6em 0em;
+  padding: 3em;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .loading-plane {
@@ -144,8 +148,6 @@
   background-color: #e54c60;
 }
 
-/* Hide on desktop mode */
-
 .responsive-background {
   width: 100%;
   height: 100%;
@@ -165,8 +167,10 @@
 
 @media screen and (min-width: 768px) {
   .form-holder form {
-    width: 50%;
+    width: 70%;
+    /* Changes */
     margin: 0 auto;
+    padding: 3em 0 0;
   }
 }
 
